--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Freelance Project </title>
   <link rel="stylesheet" href="assets/css/normalize.css">
   <link rel="stylesheet" href="assets/css/main.css">
-
+  <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
   <header class="header">
