--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <button>ES</button>
     </div>
     <div class="logo">
-      <img src="logo.png" alt="logo">
+      <img src="images/logo.png" alt="logo">
       <h1>Freelance Web Developer</h1>
     </div>
     <div class="menu">
