boton de contacto terminado

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
       <img src="images/logo.png" alt="logo">
       <h1>Freelance Web Developer</h1>
     </div>
+    <div class="button-contact">
+      <button>Contacto</button>
+    </div>
   </header>
   <div class="menu">
     <nav>
