cambiando el icono del boton idiomas

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
   <title>Freelance Project </title>
   <link rel="stylesheet" href="assets/css/normalize.css">
   <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="stylesheet" href="assets/icomoon/style.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
   <header class="header">
     <div class="button-language">
-      <button>ES</button>
+      <button>ES<span class="icon-circle-down"></span></button>
     </div>
     <div class="logo">
       <img src="images/logo.png" alt="logo">
