centrando el contenido de section.hero

--- a/index.html
+++ b/index.html
@@ -32,5 +32,16 @@
       <a href="#">Blog</a>
     </nav>
   </div>
+  <section class="hero">
+    <div class="titulo-principal">
+      <h1>Somos profesionales en desarrollar páginas web</h1>
+    </div>
+    <div class="button-buscar">
+      <button>Contáctanos <button>Enviar</button></button>
+    </div>
+    <div class="titulo-secundario">
+      <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit deserunt illo dolor molestiae ipsa ipsum consectetur facilis. Accusamus sit enim blanditiis vitae et </h2>
+    </div>
+  </section>
 </body>
 </html>
