cambiando el contenido del div.button-buscar por un h2 y un boton

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
       <h1>Somos profesionales en desarrollar páginas web</h1>
     </div>
     <div class="button-buscar">
-      <button>Contáctanos <button>Enviar</button></button>
+      <h2>¿Necesitas Nuestros Servicios?</h2>
+      <button>Contáctanos</button>
     </div>
     <div class="titulo-secundario">
       <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit deserunt illo dolor molestiae ipsa ipsum consectetur facilis. Accusamus sit enim blanditiis vitae et </h2>
