div.button-buscar terminado

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <h1>Somos profesionales en desarrollar páginas web</h1>
     </div>
     <div class="button-buscar">
-      <h2>¿Necesitas Nuestros Servicios?</h2>
+      <h2>¿Tienes alguna duda de nuestros servicios?</h2>
       <button>Contáctanos</button>
     </div>
     <div class="titulo-secundario">
