--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
     <div class="titulo-secundario">
       <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit deserunt illo dolor molestiae ipsa ipsum consectetur facilis. Accusamus sit enim blanditiis vitae et </h2>
     </div>
+    <div class="credits">
+      <p>design by <a href="https://github.com/nivamol">@nivamol</a></p>
+    </div>
   </section>
 </body>
 </html>
