agregando section.skills sin estilo

--- a/index.html
+++ b/index.html
@@ -47,5 +47,19 @@
       <p>design by <a href="https://github.com/nivamol">@nivamol</a></p>
     </div>
   </section>
+  <section class="skills">
+    <div class="html">
+      <span class="icon-html-five"></span>
+      <h3>HTML</h3>
+    </div>
+    <div class="css">
+      <span class="icon-css3"></span>
+      <h3>CSS</h3>
+    </div>
+    <div class="JS">
+      <span class="icon-embed"></span>
+      <h3>JavaScript</h3>
+    </div>
+  </section>
 </body>
 </html>
