definiendo tamanos de cada div.skill

--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
     </div>
   </section>
   <section class="skills">
-    <div class="html">
-      <span class="icon-html-five"></span>
+    <div class="html skill">
+      <span class="icon icon-html-five"></span>
       <h3>HTML</h3>
     </div>
-    <div class="css">
-      <span class="icon-css3"></span>
+    <div class="css skill">
+      <span class="icon icon-css3"></span>
       <h3>CSS</h3>
     </div>
-    <div class="JS">
-      <span class="icon-embed"></span>
+    <div class="JS skill">
+      <span class="icon icon-embed skill"></span>
       <h3>JavaScript</h3>
     </div>
   </section>
