agregando parrafos a cada div.skill

--- a/index.html
+++ b/index.html
@@ -51,14 +51,17 @@
     <div class="html skill">
       <span class="icon icon-html-five"></span>
       <h3>HTML</h3>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste possimus nulla est tempore ratione eum quam. Dolorum, vero atque. Nam sed, ipsam mollitia qui itaque laudantium eos distinctio ad voluptas?</p>
     </div>
     <div class="css skill">
       <span class="icon icon-css3"></span>
       <h3>CSS</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur accusamus sunt obcaecati tempora perspiciatis, reiciendis ad nobis id saepe cupiditate nam esse, atque dolor debitis neque. Praesentium corporis hic voluptatum?</p>
     </div>
     <div class="JS skill">
       <span class="icon icon-embed skill"></span>
       <h3>JavaScript</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, ut aliquam deleniti corrupti recusandae saepe laudantium ipsam! Ipsum dolores quam dicta cupiditate ipsam aut minima dolor. Reprehenderit repudiandae rem at?</p>
     </div>
   </section>
 </body>
