agregando section.projects sin estilo

--- a/index.html
+++ b/index.html
@@ -64,5 +64,13 @@
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, ut aliquam deleniti corrupti recusandae saepe laudantium ipsam! Ipsum dolores quam dicta cupiditate ipsam aut minima dolor. Reprehenderit repudiandae rem at?</p>
     </div>
   </section>
+  <section class="projects">
+    <div class="projects">
+      <p>Y que hay de nuestros trabajos</p>
+      <h3>Proyectos Destacados</h3>
+    </div>
+  </section>
+    
+  </div>
 </body>
 </html>
