section.projects terminada

--- a/index.html
+++ b/index.html
@@ -68,9 +68,11 @@
     <div class="projects">
       <p>Y que hay de nuestros trabajos</p>
       <h3>Proyectos Destacados</h3>
+      <img src="logo-projects.png" alt="Logo">
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque, consectetur porro facere nesciunt, itaque quas aliquam omnis saepe magni voluptates rem doloribus sapiente maiores alias aspernatur hic eius commodi officia!</p>
     </div>
+
   </section>
-    
   </div>
 </body>
 </html>
