--- a/index.html
+++ b/index.html
@@ -69,9 +69,10 @@
       <p>Y que hay de nuestros trabajos</p>
       <h3>Proyectos Destacados</h3>
       <img src="logo-projects.png" alt="Logo">
+      <img src="logo-projects.png" alt="logo">
+      <img src="logo-projects.png" alt="logo">
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque, consectetur porro facere nesciunt, itaque quas aliquam omnis saepe magni voluptates rem doloribus sapiente maiores alias aspernatur hic eius commodi officia!</p>
     </div>
-
   </section>
   </div>
 </body>
