agregando imagenes de proyectos y section.project terminada

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
     <div class="projects">
       <p>Y que hay de nuestros trabajos</p>
       <h3>Proyectos Destacados</h3>
-      <img src="logo-projects.png" alt="Logo">
-      <img src="logo-projects.png" alt="logo">
-      <img src="logo-projects.png" alt="logo">
+      <img src="images/logo-1.png" alt="Logo">
+      <img src="images/logo-2.png" alt="logo">
+      <img src="images/logo-3.png" alt="logo">
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque, consectetur porro facere nesciunt, itaque quas aliquam omnis saepe magni voluptates rem doloribus sapiente maiores alias aspernatur hic eius commodi officia!</p>
     </div>
   </section>
