footer sin estilos terminado

--- a/index.html
+++ b/index.html
@@ -101,5 +101,33 @@
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero placeat eos nihil possimus rem. Laudantium, aut eum reiciendis officiis sed rem quasi assumenda, ducimus minima nulla doloremque corrupti! Ad, hic!</p>
     </div>
   </section>
+  <footer>
+    <h3>¿Quieres trabajar con nosotros?</h3>
+    <section id="recomendaciones">
+      <div class="rec rec-1">
+        <span class="icon"></span>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem sequi dolorum saepe quos cumque eius sint error dolores nobis perspiciatis quas ad, dolor repudiandae odio explicabo optio maiores adipisci illum.</p>
+      </div>
+      <div class="rec rec-1">
+        <span class="icon"></span>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem sequi dolorum saepe quos cumque eius sint error dolores nobis perspiciatis quas ad, dolor repudiandae odio explicabo optio maiores adipisci illum.</p>
+      </div>
+      <div class="rec rec-1">
+        <span class="icon"></span>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem sequi dolorum saepe quos cumque eius sint error dolores nobis perspiciatis quas ad, dolor repudiandae odio explicabo optio maiores adipisci illum.</p>
+      </div>
+    </section>
+    <div class="social-media">
+      <span class="icon-instagram"></span>
+      <span class="icon-whatsapp"></span>
+      <span class="icon-telegram"></span>
+      <span class="icon-twitter"></span>
+      <span class="icon-facebook"></span>
+    </div>
+    <div class="button">
+      <input type="text">
+      <button>Enviar</button>
+    </div>
+  </footer>
 </body>
 </html>
