agregando los iconos a section#recomendaciones

--- a/index.html
+++ b/index.html
@@ -105,15 +105,15 @@
     <h3>¿Quieres trabajar con nosotros?</h3>
     <section id="recomendaciones">
       <div class="rec rec-1">
-        <span class="icon"></span>
+        <span class="icon-mail"></span>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem sequi dolorum saepe quos cumque eius sint error dolores nobis perspiciatis quas ad, dolor repudiandae odio explicabo optio maiores adipisci illum.</p>
       </div>
       <div class="rec rec-1">
-        <span class="icon"></span>
+        <span class="icon-checkmark"></span>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem sequi dolorum saepe quos cumque eius sint error dolores nobis perspiciatis quas ad, dolor repudiandae odio explicabo optio maiores adipisci illum.</p>
       </div>
       <div class="rec rec-1">
-        <span class="icon"></span>
+        <span class="icon-cog"></span>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem sequi dolorum saepe quos cumque eius sint error dolores nobis perspiciatis quas ad, dolor repudiandae odio explicabo optio maiores adipisci illum.</p>
       </div>
     </section>
