--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
       </div>
     </section>
     <div class="social-media">
-      <span class="icon-instagram"></span>
-      <span class="icon-whatsapp"></span>
-      <span class="icon-telegram"></span>
-      <span class="icon-twitter"></span>
-      <span class="icon-facebook"></span>
+      <a href=""><span class="icon-instagram"></span></a>
+      <a href=""><span class="icon-whatsapp"></span></a>
+      <a href=""><span class="icon-telegram"></span></a>
+      <a href=""><span class="icon-twitter"></span></a>
+      <a href=""><span class="icon-facebook"></span></a>
     </div>
     <div class="button">
       <input type="text">
