div.button input con estilos terminado

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       <a href=""><span class="icon-facebook"></span></a>
     </div>
     <div class="button">
-      <input type="text">
+      <input type="text" placeholder="Envianos tu correo">
       <button>Enviar</button>
     </div>
   </footer>
