--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       <a href=""><span class="icon-facebook"></span></a>
     </div>
     <div class="button">
-      <input type="text" placeholder="Envianos tu correo">
+      <input type="text" placeholder="Envianos tu correo o número telefonico">
       <button>Enviar</button>
     </div>
   </footer>
