--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     </div>
     <div class="button">
       <input type="text" placeholder="Envianos tu correo o número telefonico">
-      <button>Enviar</button>
+      <button>Enviar.</button>
     </div>
   </footer>
 </body>
